[gd_scene load_steps=4 format=3 uid="uid://d14t5h65ng55w"]

[ext_resource type="Script" uid="uid://bjmrbh437crpp" path="res://Scripts/Deck.gd" id="1_4r4v6"]
[ext_resource type="SpriteFrames" uid="uid://cogsrrfwgv510" path="res://Sprites/SpriteFrames/deck_sprite_frames.tres" id="2_epq6d"]
[ext_resource type="SpriteFrames" uid="uid://csl4gtqu500gd" path="res://Sprites/SpriteFrames/surbrillance_sprite_frames.tres" id="3_raw4h"]

[node name="Deck" type="Node2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_4r4v6")

[node name="DeckAnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_epq6d")
animation = &"not_empty"

[node name="SurbrillanceAnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_raw4h")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -256.0
offset_top = -488.0
offset_right = 256.0
offset_bottom = 492.0
mouse_default_cursor_shape = 2

[connection signal="button_up" from="Button" to="." method="_on_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
